--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -61,3 +61,9 @@ ul li {
   width:100vw;
   height: 40rem;
 }
+.ow{
+  width:300px;
+  height: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
