--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,6 @@
     </div>
       <div id="particles-js">
       </div>
-      <script src="/assets/javascript/particles.js"></script>
+      <script src="/assets/javascript/particles.js"></script> %>
       <script src="/assets/javascript/javascript.js"></script>
-</div>
+</div> 
