--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -61,3 +61,20 @@ ul li {
   width:100vw;
   height: 40rem;
 }
+/* リアルタイム日付 */
+.count-countdown{
+  display: flex;
+  align-items: center;
+  background-color: aqua;
+  block-size: 70px;
+  width: 570px;
+  margin: 0 auto;
+  justify-content: center;
+  font-size: 40px;
+  margin-bottom: 5px;
+}
+.count-h1{
+  font-size: 50px;
+  text-align: center;
+}
+/* ここまで */
