--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-
+<div>
+    <h1 class="count-h1">第７６回音楽と展覧の会</h1>
+    <div class="count-countdown"><span id="countdown"></span>
+    </div>
+</div>
+<script src="javascript.js"></script>
