いろいろ修正

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,16 @@
-<div>
+    <div id="wrapper">
+      <div class="image">
+      <img src="/assets/images/logo.png" class="logo">
+    </div>
+      <div id="particles-js">
+      </div>
+      <script src="/assets/javascript/particles.js"></script>
+      <script src="/assets/javascript/javascript.js"></script>
+      </div>
+
+    <div>
     <h1 class="count-h1">第７６回音楽と展覧の会</h1>
     <div class="count-countdown"><span id="countdown"></span>
     </div>
-</div>
-<script src="javascript.js"></script>
+
+
