--- a/views/access.erb
+++ b/views/access.erb
@@ -1,3 +1,28 @@
-<div class="ow2">
-<img src="/assets/images/IMG_3841.png" class="ow">
+
+<div class="accessmain">
+<div class="buttons">
+  <div class="button" id="button_bus" onclick="button_pushed('bus')">
+    <span>バス</span>
+  </div>
+  <div class="button" id="button_train" onclick="button_pushed('train')">
+    <span>電車</span>
+  </div>
 </div>
+<div id="display_content">
+  <div id="content_bus">
+  <div class="bus1"><img src="/assets/images/IMG_3841.png"></img></div>
+  <div class="bus2"><h1>文徳塾左手の道を進みます</h1></div>
+  <div class="bus3"><img src="/assets/images/IMG_3844.jpg"></img></div>
+  <div class="bus4">h1>道なりに沿っていきます</h1></div>
+  <div class="bus5"><img src="/assets/images/IMG_3845.jpg"></img></div>
+  <div class="bus6"><h1>右に曲がります</h1>
+  <div class="bus7"><img src="/assets/images/IMG_3847.jpg"></img></div>
+  <div class="bus8"><h1>左の坂を上ります</h1></div>
+  <div class="bus9"><img src="/assets/images/IMG_3848.jpg"></img></div>
+  <div class="bus10"><h1>右に曲がって少し進むと左手にテニスコートがありもっと進むと正門があります</div>
+  </div>
+  <div id="content_train">
+    <div class="train1"
+  </div>
+  </div>
+
