タイムテーブルへんこうしました

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,125 +1,485 @@
-<div class="timeTable">
-            <div class="col2of4">
-              <div class="tableBox">
-                <table>
-                  <caption>中央ステージ</caption>
-                  <tbody>
-                    <tr>
-                      <th class="just borderNone" rowspan="2">18:00</th>
-                      <td class="color01">OPEN</td>
-                    </tr>
-                    <tr>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line3 borderNone">18:20</th>
-                      <td class="line3 color02">［18:20～］ たこ焼き</td>
-                    </tr>
-                    <tr>
-                      <th></th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone">19:00</th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line2 borderNone">19:10</th>
-                      <td class="line2 color02">［19:10～］綿あめ</td>
-                    </tr>
-                    <tr>
-                      <th class="borderNone"></th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="borderNone"></th>
-                     <td></td>
-                    </tr>
-                    <tr>
-                      <th>19:50</th>
-                      <td class="line2 color02" rowspan="2">［19:50～］  メロンソーダ</td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone">20:00</th>
-                    </tr>
-                    <tr>
-                      <th class=" borderNone"></th>
-                      <td></td>
-                    </tr>
-                      <tr>
-                      <th class=" borderNone"></th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line3">20:30</th>
-                      <td class="line3 color02">［20:30～］  鳩サブレ</td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone">21:00</th>
-                      <td class="color01">CLOSE</td>
-                    </tr>
-                  </tbody>
-                </table>
-              <!-- /.tableBox --></div>
-            <!-- /.col2of4 --></div>
-          
-            <div class="col2of4">
-              <div class="tableBox">
-                <table>
-                  <caption>運動場</caption>
-                  <tbody>
-                    <tr>
-                      <th class="just borderNone" rowspan="3">18:00</th>
-                      <td class="color01">OPEN</td>
-                    </tr>
-                    <tr>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line3">18:30</th>
-                      <td class="line3 color02">［18:30～］ お好み焼き</td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone">19:00</th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="borderNone">
-                      <td></td>
-                    </tr>
-                    <tr>
-                    <th class="line3 borderNone">19:20</th>
-                    <td class="line3 color02">［19:20～］ りんご飴</td>
-                    </tr>
-                    <tr>
-                      <th></th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone">20:00</th>
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line2 borderNone">20:10</th>
-                      <td class="line2 color02">［20:10～］ クリームソーダ</td>
-                    </tr>
-                    <tr>
-                      <th class="borderNone">
-                      <td></td>
-                    </tr>
-                    <tr>
-                      <th class="line2">20:40</th>
-                      <td class="line2 color02">［20:40～］  ひよこ</td>
-                    </tr>
-                    <tr>
-                      <th class="just borderNone line0-5">21:00</th>
-                      <td class="color01">CLOSE</td>
-                    </tr>
-                  </tbody>
-                </table>
-              <!-- /.tableBox --></div>
-            <!-- /.col2of4 --></div>
-          <!-- /.timeTable --></div>
+<h1 class="time-midasi">TIME TABLE</h1>
+<table class="time-table">
+        <tr class="positionsticky">
+          <th class="time-time"></th>
+          <td class="time-title">講堂</td>
+          <td class="time-title">中央ステージ</td>
+          <td class="time-title">バンド</td>
+          <td class="time-title">ルーコン</td>
+          <td class="time-title">脱出ゲーム</td>
+          <th class="time-time"></th>
+        </tr>
+        <!-- 9:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">9:00</th>
+          <td rowspan="8" class="time-event">個人演奏１</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">9:00</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 9:30 -->
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="5" class="time-event">1年クラス合唱</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 10:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">10:00</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">10:00</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="9" class="time-event">個人演奏２</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 10:30 -->
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 11:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">11:00</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">11:00</th>
+        </tr>
+        <tr>
+          <td rowspan="6" class="time-event">2年クラス合唱</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 11:30 -->
+        <tr>
+          <td rowspan="2" class="time-event">歌唱「新時代」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="7" class="time-event">個人演奏３</td>
+          <td rowspan="2" class="time-event">ダンス「アイドル」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4" class="time-event">マジック</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 12:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">12:00</th>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">12:00</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4" class="time-event">3年クラス合唱</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 12:30 -->
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4" class="time-event">グリー部</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 13:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">13:00</th>
+          <td rowspan="2" class="time-event">歌唱「点描の歌」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">13:00</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td rowspan="4" class="time-event">甲コレ</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="3" class="time-event">アンサンブル部</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 13:30 -->
+        <tr>
+          <td rowspan="2" class="time-event">歌唱</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td rowspan="4" class="time-event">表彰式</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 14:00 -->
+        <tr>
+          <th rowspan="12" class="time-time">14:00</th>
+          <td></td>
+          <td rowspan="2" class="time-event">ダンス「DNA」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <th rowspan="12" class="time-time">14:00</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td rowspan="2" class="time-event">ダンス「カンナムスタイル」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td rowspan="2" class="time-event">歌唱「快晴」</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- 14:30 -->
+        <tr>
+          <td></td>
+          <td rowspan="2" class="time-event">アイドルパフォーマンス</td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+</table> 
