--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -1,67 +1,42 @@
-/* タイムテーブル陽　ｃｓｓ */
-caption {
-    margin-bottom: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: left;
-  }
-  .timeTable {
-    clear: both;
-  }
-  .col2of4 {
-    width: 400px;
-    float: left;
-    zoom: 1;
-  }
-  .tableBox{
-    margin: 0 10px;
-  }
-  table {
-    width: 100%;
-    table-layout: fixed;
-    border-collapse: collapse;
-    border-spacing: 0;
-    border: none;
-  }
-  th,td {
-    border: 1px solid #fff;
-  }
-  th {
-    width: 70px;
-    font-size:12px;
-    color: #fff;
-    text-align: center;
-    background-color: #2C3E5C;
-    vertical-align: top;
-  }
-  td {
-    height: 25px;
-    padding: 0 10px;
-    font-size: 14px;
-    text-align: center;
-    background: #f3f4ef;
-  }
-  .borderNone {
-    border-bottom: 1px solid #2C3E5C;
-  }
-  .tableBox th.just {
-    padding-top: 7px;
-    box-sizing: border-box;
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 1;
-  }
-  .color01{
-    background:#D8C8AE;
-  }
-  .color02 {
-    background: #80B7E8;
-  }
-  .line2 {
-    height: 51px;
-  }
-  .line3 {
-    height: 77px;
-  }
-  caption{text-align: center;}
-  /* ここまでタイムテーブル */
+.time-table {
+  width: 60%;
+  border : 0;
+  margin: auto;
+  border-spacing: 0;
+  border: none;
+  /* table-layout: fixed; */
+  border-collapse: collapse;
+  word-wrap: break-word;
+  background-color: gray;
+}
+.time-time {
+  border: 1px  solid gray;
+  width: 25px;
+  font-size:12px;
+  color: black;
+  text-align: center;
+  background-color: #fff;
+  vertical-align: top;
+}
+.time-event {
+  border: 1px  solid gray;
+  font-size: 14px;
+  text-align: center;
+  background-color: crimson;
+}
+.time-table td{
+  height: 25px;
+  width:88px;
+}
+.time-title{
+  text-align: center;
+  background-color:gray;
+}
+.positionsticky{
+  position: sticky;
+  top: 0;
+}
+.time-midasi{
+  text-align: center;
+  color:#fff;
+}
