リアル時間機能バグ修正

--- a/views/access.erb
+++ b/views/access.erb
@@ -1,4 +1,4 @@
-
+<script src="/assets/javascript/access.js"></script>
 <div class="accessmain">
 <div class="buttons">
   <div class="button" id="button_bus" onclick="button_pushed('bus')">
