--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,7 @@
       <script src="/assets/javascript/javascript.js"></script>
       </div>
 
-    <h1 class="count-h1">第７６回音楽と展覧の会</h1>
+      <h1 class="count-h1">第７６回　音楽と展覧の会</h1>
     <div class="count-countdown"><span id="countdown"></span>
     </div>
+    <script src="/assets/javascript/javascript.js"></script>
