タイムテーブル改良

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,18 +1,26 @@
-<h1 class="time-midasi">TIME TABLE</h1>
-<table class="time-table">
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta lang="ja">
+        <link rel="stylesheet" href="aho.css">
+    </head>
+    <body class="time-body">
+      <h1 class="time-midasi">TIME TABLE</h1>
+      <table class="time-table">
         <tr class="positionsticky">
-          <th class="time-time"></th>
+          <th class="time-non"></th>
           <td class="time-title">講堂</td>
           <td class="time-title">中央ステージ</td>
           <td class="time-title">バンド</td>
           <td class="time-title">ルーコン</td>
           <td class="time-title">脱出ゲーム</td>
-          <th class="time-time"></th>
+          <th class="time-non"></th>
         </tr>
         <!-- 9:00 -->
         <tr>
           <th rowspan="12" class="time-time">9:00</th>
-          <td rowspan="8" class="time-event">個人演奏１</td>
+          <td rowspan="8" class="time-event-left">個人演奏１</td>
           <td></td>
           <td></td>
           <td></td>
@@ -70,7 +78,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="5" class="time-event">1年クラス合唱</td>
+          <td rowspan="5" class="time-event-left">1年クラス合唱</td>
           <td></td>
           <td></td>
           <td></td>
@@ -111,7 +119,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="9" class="time-event">個人演奏２</td>
+          <td rowspan="9" class="time-event-left">個人演奏２</td>
           <td></td>
           <td></td>
           <td></td>
@@ -177,7 +185,7 @@
           <th rowspan="12" class="time-time">11:00</th>
         </tr>
         <tr>
-          <td rowspan="6" class="time-event">2年クラス合唱</td>
+          <td rowspan="6" class="time-event-left">2年クラス合唱</td>
           <td></td>
           <td></td>
           <td></td>
@@ -221,7 +229,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="7" class="time-event">個人演奏３</td>
+          <td rowspan="7" class="time-event-left">個人演奏３</td>
           <td rowspan="2" class="time-event">ダンス「アイドル」</td>
           <td></td>
           <td></td>
@@ -270,7 +278,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="4" class="time-event">3年クラス合唱</td>
+          <td rowspan="4" class="time-event-left">3年クラス合唱</td>
           <td></td>
           <td></td>
           <td></td>
@@ -303,7 +311,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="4" class="time-event">グリー部</td>
+          <td rowspan="4" class="time-event-left">グリー部</td>
           <td></td>
           <td></td>
           <td></td>
@@ -350,7 +358,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="3" class="time-event">アンサンブル部</td>
+          <td rowspan="3" class="time-event-left">アンサンブル部</td>
           <td></td>
           <td></td>
           <td></td>
@@ -374,7 +382,7 @@
           <td></td>
         </tr>
         <tr>
-          <td rowspan="4" class="time-event">表彰式</td>
+          <td rowspan="4" class="time-event-left">表彰式</td>
           <td></td>
           <td></td>
           <td></td>
@@ -482,4 +490,6 @@
           <td></td>
           <td></td>
         </tr>
-</table> 
+      </table>    
+    </body>
+</html>
