--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -1,6 +1,9 @@
+.time-body{
+  background-color: #111111;
+}
 .time-table {
   width: 60%;
-  border : 0;
+  border : 10px solid white;
   margin: auto;
   border-spacing: 0;
   border: none;
@@ -10,7 +13,7 @@
   background-color: gray;
 }
 .time-time {
-  border: 1px  solid gray;
+  border: 1px  solid white;
   width: 25px;
   font-size:12px;
   color: black;
@@ -20,6 +23,7 @@
 }
 .time-event {
   border: 1px  solid gray;
+  border-top: 1px  solid crimson;
   font-size: 14px;
   text-align: center;
   background-color: crimson;
@@ -39,4 +43,16 @@
 .time-midasi{
   text-align: center;
   color:#fff;
+  font-size:100px ;
+}
+.time-non{
+  background-color: gray;
+}
+.time-event-left {
+  border: 1px  solid gray;
+  border-top: 1px  solid crimson;
+  border-left:none;
+  font-size: 14px;
+  text-align: center;
+  background-color: crimson;
 }
