--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,7 +16,7 @@ ul li a:hover {
   background-color: lightsteelblue;
 }
 nav {
-    background-color: whitesmoke;
+    background-color: white;
     width: 100%;
     height: 50px;
 }
@@ -30,7 +30,7 @@ ul li {
     position:absolute; 
     width: 100%; 
     height: 40rem; 
-    background-color: #b61924; 
+    background-color: #00bfff; 
     background-image: url(""); 
     background-repeat: no-repeat;
     background-size: cover;
