--- a/views/access.erb
+++ b/views/access.erb
@@ -33,7 +33,11 @@
  </div>
  
   <div id="content_train">
-    <div class="train1">
-  </div>
-  </div>
+  <div class="each-train">
+  <img src="/assets/images/Screenshot_20230910-152024.png" class"access-image"></img>
+  <p class"access-text">オアシスに行く道に行きます</p>
+ </div> 
+
+ </div>
+  
 
