--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,7 +66,17 @@ ul li {
 
 #display_content {
   width: 100%;
-  
+}
+.date{
+  text-align:center;
+  margin-top:200px;
+}
+.main-date{
+  font-size:450px;
+  line-height: 300px;
+}
+.sub-date{
+  font-size:100px;
 }
 
 /* リアルタイム日付 */
