--- a/views/index.erb
+++ b/views/index.erb
@@ -7,6 +7,12 @@
       <script src="/assets/javascript/particles.js"></script>
       <script src="/assets/javascript/javascript.js"></script>
       </div>
+    <div class="date">
+     <p class="main-date">9.23</p>
+     <p class="sub-date">9:00~16:00</p>
+    </div>
+
+
 
       <h1 class="count-h1">第７６回　音楽と展覧の会</h1>
     <div class="count-countdown"><span id="countdown"></span>
