タイムテーブルデザイン改良

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta lang="ja">
-        <link rel="stylesheet" href="aho.css">
-    </head>
-    <body class="time-body">
-      <h1 class="time-midasi">TIME TABLE</h1>
-      <table class="time-table">
-        <tr class="positionsticky">
-          <th class="time-non"></th>
-          <td class="time-title">講堂</td>
-          <td class="time-title">中央ステージ</td>
-          <td class="time-title">バンド</td>
-          <td class="time-title">ルーコン</td>
-          <td class="time-title">脱出ゲーム</td>
-          <th class="time-non"></th>
-        </tr>
-        <!-- 9:00 -->
-        <tr>
-          <th rowspan="12" class="time-time">9:00</th>
-          <td rowspan="8" class="time-event-left">個人演奏１</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <th rowspan="12" class="time-time">9:00</th>
-        </tr>
+<h1 class="time-midasi">TIME TABLE</h1>
+<table class="time-table">
+  <tr>
+    <th class="time-nonl positionsticky"></th>
+    <td class="time-title positionsticky" >講堂</td>
+    <td class="time-title positionsticky">中央ステージ</td>
+    <td class="time-title positionsticky">バンド</td>
+    <td class="time-title positionsticky">ルーコン</td>
+    <td class="time-title positionsticky">脱出ゲーム</td>
+    <th class="time-nonr positionsticky"></th>
+  </tr>
+  <!-- 9:00 -->
+ <tr>
+    <th rowspan="12" class="time-time">9:00</th>
+    <td rowspan="8" class="time-event-left">個人演奏１</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <th rowspan="12" class="time-time">9:00</th>
+  </tr>
         <tr>
           <td></td>
           <td></td>
@@ -490,6 +482,4 @@
           <td></td>
           <td></td>
         </tr>
-      </table>    
-    </body>
-</html>
+      </table>  
