--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -1,29 +1,26 @@
 .time-table {
   width: 60%;
-  border : 10px solid white;
+  box-shadow: 0px 0px 10px 5px #888;
   margin: auto;
-  border-spacing: 0;
-  border: none;
   /* table-layout: fixed; */
   border-collapse: collapse;
   word-wrap: break-word;
-  background-color: gray;
+  background-color: white;
 }
 .time-time {
-  border: 1px  solid white;
+  border-top: 1px solid #111111;
   width: 25px;
-  font-size:12px;
+  font-size:15px;
   color: black;
   text-align: center;
-  background-color: #fff;
+  background-color: whitesmoke;
   vertical-align: top;
 }
 .time-event {
-  border: 1px  solid gray;
-  border-top: 1px  solid crimson;
+  border-bottom: 1px solid white;
   font-size: 14px;
   text-align: center;
-  background-color: crimson;
+  background-color: rgba(0,255,255,0.4);
 }
 .time-table td{
   height: 25px;
@@ -31,7 +28,13 @@
 }
 .time-title{
   text-align: center;
-  background-color:gray;
+  background-color:whitesmoke;
+  font-size: 20px;
+  height:50px;
+  width:90px;
+  border : 1px solid whitesmoke;
+  border-bottom: 3px solid whitesmoke;
+
 }
 .positionsticky{
   position: sticky;
@@ -39,17 +42,27 @@
 }
 .time-midasi{
   text-align: center;
-  color:#fff;
+  color:#111111;
   font-size:100px ;
 }
-.time-non{
-  background-color: gray;
+.time-nonl{
+  background-color: whitesmoke;
+  border: 1px solid whitesmoke;
+  height:50px;
+  width: 30px;
+  border-bottom: 1px solid #111111;
+}
+.time-nonr{
+  background-color: whitesmoke;
+  border: 1px solid whitesmoke;
+  height:50px;
+  width: 30px;
+  border-bottom: 1px solid #111111;
 }
 .time-event-left {
-  border: 1px  solid gray;
-  border-top: 1px  solid crimson;
-  border-left:none;
+  border: 1px  solid white;
+  border-left:1px  solid whitesmoke;
   font-size: 14px;
   text-align: center;
-  background-color: crimson;
+  background-color: rgba(0,255,255,0.4);
 }
