--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30,7 +30,7 @@ ul li {
     position:absolute; 
     width: 100%; 
     height: 40rem; 
-    background-color: #00bfff; 
+    background-color: #006dff; 
     background-image: url(""); 
     background-repeat: no-repeat;
     background-size: cover;
@@ -41,7 +41,7 @@ ul li {
 
 .logo{
   height: 30rem;
-  width: 49.2rem;
+  width: 60rem;
   margin:0 auto;
 }
 
@@ -53,7 +53,7 @@ ul li {
   left: 0;
   margin: auto;
   height: 30rem;
-  width: 49.2rem;
+  width: 60rem;
   z-index:10;
 }
 #wrapper{
