--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -73,17 +73,19 @@ ul li {
 .count-countdown{
   display: flex;
   align-items: center;
-  background-color: aqua;
+  background-color: rgba(237, 11, 11, 0.6);
   block-size: 70px;
   width: 570px;
   margin: 0 auto;
   justify-content: center;
   font-size: 40px;
   margin-bottom: 5px;
+  color: #ffffff;
 }
 .count-h1{
   font-size: 50px;
   text-align: center;
+  color: #ffffff;
 }
 /* ここまで */
 
