カウントダウン

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,9 +12,8 @@
      <p class="sub-date">9:00~15:00</p>
     </div>
 
-
-
-      <h1 class="count-h1">第７６回　音楽と展覧の会</h1>
+    <div class="count-div1">
+    <p class="count-blue"><img src="blue.png"></p>
     <div class="count-countdown"><span id="countdown"></span>
     </div>
-    <script src="/assets/javascript/javascript.js"></script>
+    </div>
