--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -80,22 +80,31 @@ ul li {
 }
 
 /* リアルタイム日付 */
+.count-div1{
+  height: auto;
+  position: absolute;
+  top: 2px;
+  left: 15%;
+}
 .count-countdown{
-  display: flex;
-  align-items: center;
-  background-color: rgba(237, 11, 11, 0.6);
-  block-size: 70px;
-  width: 570px;
-  margin: 0 auto;
-  justify-content: center;
   font-size: 40px;
-  margin-bottom: 5px;
-  color: #ffffff;
-}
-.count-h1{
-  font-size: 50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 0;
+  margin: 0;
+  color: red;
+  width: 500px;
   text-align: center;
-  color: #ffffff;
 }
+.count-blue{
+  margin: 0 auto;
+}
+p img{
+  width: 750px;
+  margin: 0 auto;
+}
+
 /* ここまで */
 
