--- a/views/index.erb
+++ b/views/index.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="count-div1">
-    <p class="count-blue"><img src="blue.png"></p>
+    <p class="count-blue"><img src="/assets/images/blue.png"></p>
     <div class="count-countdown"><span id="countdown"></span>
     </div>
     </div>
