--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -83,27 +83,28 @@ ul li {
 .count-div1{
   height: auto;
   position: absolute;
-  top: 1350px;
-  left: 20%;
+  top: 1400px;
+  left: 17%;
 }
 .count-countdown{
-  font-size: 40px;
+  font-size: 85px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
   padding: 0;
   margin: 0;
-  color: red;
-  width: 500px;
+  color: #131313;
+  width: 800px;
   text-align: center;
 }
 .count-blue{
   margin: 0 auto;
 }
 .count-blue img{
-  width: 750px;
+  width: 900px;
   margin: 0 auto;
+  height: 200px;
 }
 
 /* ここまで */
