タイムテーブル微調整

--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -2,8 +2,8 @@
       <table class="time-table">
         <tr>
           <th class="time-nonl positionsticky"></th>
-          <td class="time-title positionsticky" >講堂</td>
-          <td class="time-title positionsticky">中央ステージ</td>
+          <td class="time-title positionsticky ll" >講堂</td>
+          <td class="time-title positionsticky long">中央ステージ</td>
           <td class="time-title positionsticky">バンド</td>
           <td class="time-title positionsticky">ルーコン</td>
           <td class="time-title positionsticky">脱出ゲーム</td>
@@ -240,7 +240,7 @@
         </tr>
         <!-- 11:30 -->
         <tr>
-          <td rowspan="2" class="time-event">歌唱<br>「新時代」</td>
+          <td rowspan="2" class="time-event">歌唱<br>新時代</td>
           <td></td>
           <td></td>
           <td></td>
@@ -255,7 +255,7 @@
         </tr>
         <tr>
           <td rowspan="7" class="time-event-left">個人演奏３</td>
-          <td rowspan="2" class="time-event">ダンス<br>「アイドル」</td>
+          <td rowspan="2" class="time-event">ダンス<br>アイドル</td>
           <td></td>
           <td></td>
           <td></td>
@@ -373,7 +373,7 @@
         <!-- 13:00 -->
         <tr>
           <th rowspan="12" class="time-time">13:00</th>
-          <td rowspan="2" class="time-event">歌唱<br>「点描の歌」</td>
+          <td rowspan="2" class="time-event">歌唱<br>点描の歌</td>
           <td></td>
           <td></td>
           <td></td>
@@ -463,7 +463,7 @@
         <tr>
           <th rowspan="12" class="time-time">14:00</th>
           <td></td>
-          <td rowspan="2" class="time-event">ダンス<br>「DNA」</td>
+          <td rowspan="2" class="time-event">ダンス<br>DNA</td>
           <td></td>
           <td></td>
           <td></td>
@@ -479,7 +479,7 @@
         </tr>
         <tr>
           <td></td>
-          <td rowspan="2" class="time-event">ダンス<br>「カンナムスタイル」</td>
+          <td rowspan="2" class="time-event">ダンス<br>カンナムスタイル</td>
           <td></td>
           <td></td>
           <td></td>
@@ -494,7 +494,7 @@
         </tr>
         <tr>
           <td></td>
-          <td rowspan="2" class="time-event">歌唱<br>「快晴」</td>
+          <td rowspan="2" class="time-event">歌唱<br>快晴</td>
           <td></td>
           <td></td>
           <td></td>
