カウントダウン修正

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,8 +12,8 @@
      <p class="sub-date">9:00~15:00</p>
     </div>
 
-    <div class="count-div1">
-    <p class="count-blue"><img src="/assets/images/blue.png"></p>
-    <div class="count-countdown"><span id="countdown"></span>
+<div class="count-div1">
+    <div class="count-countdown">
+    <span id="countdown"></span>
     </div>
-    </div>
+</div>
