--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -81,30 +81,24 @@ ul li {
 
 /* リアルタイム日付 */
 .count-div1{
-  height: auto;
-  position: absolute;
-  top: 1400px;
-  left: 17%;
+  height: 180px;
+  margin: 0 auto;
+  width: 800px;
+  background-image: url(/assets/images/blue.png);
+  background-size: cover;
+  position: relative;
 }
 .count-countdown{
-  font-size: 85px;
+  font-size: 90px;
+  color: red;
+  width: 800px;
+  height: 100px;
+  text-align: center;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%,-50%);
-  padding: 0;
-  margin: 0;
-  color: #131313;
-  width: 800px;
-  text-align: center;
-}
-.count-blue{
-  margin: 0 auto;
-}
-.count-blue img{
-  width: 900px;
-  margin: 0 auto;
-  height: 200px;
+  padding: 2px auto;
 }
 
 /* ここまで */
