--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,11 +13,12 @@
   <link rel="stylesheet" href="/assets/css/style.css">
   <link rel="stylesheet" href="/assets/css/reset.css">
   <link rel="stylesheet" href="/assets/css/layout.css">
+  <link rel="fonr" href="/assets/fonts/def/fgm.ttf">
   <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <title>NEAR- 音展2023 | トップページ</title>
+  <title>NewERA- 音展2023 | トップページ</title>
 </head>
 <body>
   <div class="top">
@@ -35,6 +36,7 @@
     
     
       <div class="yield-main">
+      <img href="/assets/images/background.webp" class="bacimg">
         <%= yield %>
       </div>
 </body>
