いろいろ追加

--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -22,12 +22,10 @@
   font-family :'Arial Narrow Bold', sans-serif;
 }
 .time-event {
-  border-bottom: 1px solid white;
+  border : 1px solid white;
   font-size: 14px;
   text-align: center;
   background-color: rgba(0,255,255,0.4);
-  font-family:"MS Pゴシック", sans-serif;
-  font-weight: bold;
 }
 .time-table td{
   height: 25px;
@@ -37,12 +35,12 @@
   background-color:whitesmoke;
   font-size: 20px;
   height:60px;
+  width:150px;
   border : 1px solid whitesmoke;
   border-bottom: 3px solid whitesmoke;
   font-family:"MS Pゴシック", sans-serif;
+
 }
-.long{width: 160px;}
-.ll{width: 120px;}
 .positionsticky{
   position: sticky;
   top: 0;
@@ -73,6 +71,4 @@
   font-size: 14px;
   text-align: center;
   background-color: rgba(0,255,255,0.4);
-  font-family:"MS Pゴシック", sans-serif;
-  font-weight: bold;
 }
