--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -2,11 +2,12 @@
       <table class="time-table">
         <tr>
           <th class="time-nonl positionsticky"></th>
-          <td class="time-title positionsticky ll" >講堂</td>
-          <td class="time-title positionsticky long">中央ステージ</td>
+          <td class="time-title positionsticky" >講堂</td>
+          <td class="time-title positionsticky">中央<br>ステージ</td>
           <td class="time-title positionsticky">バンド</td>
-          <td class="time-title positionsticky">ルーコン</td>
-          <td class="time-title positionsticky">脱出ゲーム</td>
+          <td class="time-title positionsticky">ルーム<br>コンテスト</td>
+          <td class="time-title positionsticky">2A</td>
+          <td class="time-title positionsticky">2B</td>
           <td class="time-title positionsticky">視聴覚室</td>
           <th class="time-nonr positionsticky"></th>
         </tr>
@@ -19,6 +20,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
           <th rowspan="12" class="time-time">9:00</th>
         </tr>
         <tr>
@@ -27,12 +29,6 @@
           <td></td>
           <td></td>
           <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
           <td></td>
         </tr>
         <tr>
@@ -41,6 +37,15 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
           <td></td>
@@ -48,8 +53,10 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -61,6 +68,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>1</td>
           <td></td>
           <td></td>
         </tr>
@@ -125,6 +133,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td rowspan="9" class="time-event-left">個人演奏２</td>
@@ -133,12 +142,14 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>1</td>
           <td></td>
         </tr>
         <tr>
@@ -169,12 +180,6 @@
           <td></td>
           <td></td>
           <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
           <td></td>
         </tr>
         <tr>
@@ -183,8 +188,18 @@
           <td></td>
           <td></td>
           <td></td>
+          <td></td>
         </tr>
         <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -198,7 +213,8 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>2</td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>2</td>
           <td></td>
           <th rowspan="12" class="time-time">11:00</th>
         </tr>
@@ -208,6 +224,11 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
           <td></td>
         </tr>
         <tr>
@@ -215,17 +236,8 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -240,14 +252,13 @@
         </tr>
         <!-- 11:30 -->
         <tr>
-          <td rowspan="2" class="time-event">歌唱<br>新時代</td>
-          <td></td>
+          <td rowspan="2" class="time-event">歌唱<br>「新時代」</td>
+          <td rowspan="4" class="time-event">Sifica</td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
         <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -255,7 +266,7 @@
         </tr>
         <tr>
           <td rowspan="7" class="time-event-left">個人演奏３</td>
-          <td rowspan="2" class="time-event">ダンス<br>アイドル</td>
+          <td rowspan="2" class="time-event">ダンス<br>「アイドル」</td>
           <td></td>
           <td></td>
           <td></td>
@@ -271,11 +282,12 @@
           <td rowspan="4" class="time-event">マジック</td>
           <td></td>
           <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>3</td>
           <td></td>
           <td></td>
         </tr>
         <tr>
-          <td></td>
+          <td rowspan="5" class="time-event">Chikuwa</td>
           <td></td>
           <td></td>
           <td></td>
@@ -284,28 +296,18 @@
         <tr>
           <th rowspan="12" class="time-time">12:00</th>
           <td></td>
-          <td></td>
-          <td></td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>3</td>
           <td rowspan="12" class="time-event">Xｰmodel<br>ADDITIONAL<br>LIVE<br>2023</td>
           <th rowspan="12" class="time-time">12:00</th>
         </tr>
         <tr>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
         </tr>
         <tr>
           <td></td>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -316,12 +318,10 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
           <td></td>
-          <td></td>
-          <td></td>
+          <td class="time-event">LOVE_SICK</td>
           <td></td>
           <td></td>
         </tr>
@@ -335,7 +335,7 @@
         </tr>
         <tr>
           <td></td>
-          <td></td>
+          <td rowspan="4" class="time-event">.mp5</td>
           <td></td>
           <td></td>
           <td></td>
@@ -344,9 +344,8 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>4</td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>4</td>
         </tr>
         <tr>
           <td rowspan="4" class="time-event-left">グリー部</td>
@@ -354,17 +353,14 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
         </tr>
         <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -373,7 +369,7 @@
         <!-- 13:00 -->
         <tr>
           <th rowspan="12" class="time-time">13:00</th>
-          <td rowspan="2" class="time-event">歌唱<br>点描の歌</td>
+          <td rowspan="2" class="time-event">歌唱<br>「点描の歌」</td>
           <td></td>
           <td></td>
           <td></td>
@@ -407,6 +403,7 @@
           <td></td>
           <td></td>
           <td></td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>5</td>
           <td></td>
         </tr>
         <tr>
@@ -420,11 +417,10 @@
           <td rowspan="2" class="time-event">歌唱</td>
           <td></td>
           <td></td>
-          <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>5</td>
           <td></td>
         </tr>
         <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -463,15 +459,14 @@
         <tr>
           <th rowspan="12" class="time-time">14:00</th>
           <td></td>
-          <td rowspan="2" class="time-event">ダンス<br>DNA</td>
+          <td rowspan="2" class="time-event">ダンス<br>「DNA」</td>
           <td></td>
           <td></td>
-          <td></td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>6</td>
           <td></td>
           <th rowspan="12" class="time-time">14:00</th>
         </tr>
         <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -494,10 +489,10 @@
         </tr>
         <tr>
           <td></td>
-          <td rowspan="2" class="time-event">歌唱<br>快晴</td>
+          <td rowspan="2" class="time-event">歌唱<br>「快晴」</td>
           <td></td>
           <td></td>
-          <td></td>
+          <td rowspan="8" class="time-event">連続爆破事件<br>からの脱出<br>6</td>
           <td></td>
         </tr>
         <tr>
@@ -528,19 +523,10 @@
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td rowspan="4" class="time-event">とある秘密倉庫<br>からの脱出<br>7</td>
           <td></td>
         </tr>
         <tr>
-          <td></td>
           <td></td>
           <td></td>
           <td></td>
@@ -553,6 +539,12 @@
           <td></td>
           <td></td>
           <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
           <td></td>
         </tr>
-      </table>
+      </table>  
