--- a/views/circle.erb
+++ b/views/circle.erb
@@ -5,6 +5,7 @@
                    <span>1</span>
                    "物理部"
                    <a href="/buturidoukoukai">aaaaa</a>
+                   <a href="/kagakubu">化学部</a>
                 <h3>
                 <div class="circle_b">
                     <p class="circle_images">
