いろいろ変わります

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -90,7 +90,7 @@ ul li {
 }
 .count-countdown{
   font-size: 90px;
-  color: red;
+  color: #05c8e6;
   width: 800px;
   height: 100px;
   text-align: center;
