--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -81,10 +81,10 @@ ul li {
 
 /* リアルタイム日付 */
 .count-div1{
-  height: 180px;
+  height: 740px;
   margin: 0 auto;
-  width: 800px;
-  background-image: url(/assets/images/blue.png);
+  width: 1200px;
+  background-image: url(/assets/images/realtimebackground.png);
   background-size: cover;
   position: relative;
 }
@@ -95,10 +95,10 @@ ul li {
   height: 100px;
   text-align: center;
   position: absolute;
-  top: 30%;
+  top: 46%;
   left: 50%;
   transform: translate(-50%,-50%);
-  padding: 2px auto;
+  /* padding: 2px auto; */
 }
 
 /* ここまで */
