--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,17 +1,11 @@
 <h1>サークル一覧</h1>
-        <div class="container">
-            <div class="item">
-                <h3 class="circle_name">
-                   <span>1</span>
-                   "物理部"
-                   <a href="/buturidoukoukai">aaaaa</a>
-                   <a href="/kagakubu">化学部</a>
-                <h3>
-                <div class="circle_b">
-                    <p class="circle_images">
-                       <img src="../images/buturi.png" alt="物理部">
-                    </p>
-                    
-                </div>
-            </div>
-        <div>
+    <div class="container">
+        <div class="item">
+            物理部
+                <a href="/buturibu">aaaaa</a>
+        </div>
+        <div class="circle_name">
+            生物部
+            <a href="/seibutubu">bbbbb</a>
+        </div>
+    </div>
