--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -1,1 +1,11 @@
-aijoifahfia
+               <h3 class="circle_name">
+                  <span>1</span>
+                  "物理部"
+                  <a href="/buturibu">aaaaa</a>
+               <h3>
+               <div class="circle_b">
+                   <p class="circle_images">
+                      <img src="https://cdn.discordapp.com/attachments/1117774829463023626/1151055392399446016/2023-08-30_20_48_57.png" alt="物理部">
+                   </p>
+                   
+               </div>
