--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -5,7 +5,7 @@
                <h3>
                <div class="circle_b">
                    <p class="circle_images">
-                      <img src="https://cdn.discordapp.com/attachments/1117774829463023626/1151055392399446016/2023-08-30_20_48_57.png" alt="物理部">
+                      <img src="../images/buturibu.png" alt="物理部">
                    </p>
                    
                </div>
