--- a/public/assets/css/timetable.css
+++ b/public/assets/css/timetable.css
@@ -22,10 +22,10 @@
   font-family :'Arial Narrow Bold', sans-serif;
 }
 .time-event {
-  border : 1px solid white;
+  border : 1px solid rgb(121,121,121);
   font-size: 14px;
   text-align: center;
-  background-color: rgba(0,255,255,0.4);
+  background-color: rgba(0,255,255,0.765);
 }
 .time-table td{
   height: 25px;
