サークル追加

--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,11 +1,75 @@
 <h1>サークル一覧</h1>
     <div class="container">
         <div class="item">
-            物理部
-                <a href="/buturibu">aaaaa</a>
+            <p class="circle_p_name">物理部</p>
+            <a href="/buturibu">aaaaa</a>
         </div>
         <div class="circle_name">
-            生物部
+            <p class="circle_p_name">生物部</p>
             <a href="/seibutubu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">化学部</p>
+            <a href="/kagakubu">ccccc</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">地歴部</p>
+            <a href="/tirekibu">ddddd</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">天文部</p>
+            <a href="/tennmonnbu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">将棋部</p>
+            <a href="/shougibu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">美術部</p>
+            <a href="/bizyutubu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">アンサンブル部</p>
+            <a href="/annsannburubu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">ESS部</p>
+            <a href="/essbu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">写真部</p>
+            <a href="/shasinnbu">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">文芸部＆図書委員</p>
+            <a href="/bunngeibu-tosho">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">数学同好会</p>
+            <a href="/sugakudoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">PC同好会</p>
+            <a href="/pcdoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">軽音同好会</p>
+            <a href="/keionndoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">奇術同好会</p>
+            <a href="/kizyutudoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">鉄道同好会</p>
+            <a href="/tetudoudoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">旅行同好会</p>
+            <a href="/ryokoudoukoukai">bbbbb</a>
+        </div>
+        <div class="circle_name">
+            <p class="circle_p_name">スプラ同好会</p>
+            <a href="/supuradoukoukai">bbbbb</a>
         </div>
     </div>
