--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -1,15 +1,15 @@
 .container{
-    display:flex;
-    flex-wrap:wrap;
+    display: flex;
+    flex-wrap: wrap;
 }
-.item{
-    width:500px;
-    height:300px;
+.circle_name{
+    width: 500px;
+    height: 300px;
     background-color: black;
     color: aliceblue;
     margin: 10px;
-    padding:10px;
+    padding: 10px;
 }
-.circle_b{
-    display:flex;
+.circle_h1{
+    color: aliceblue;
 }
