--- a/views/circle.erb
+++ b/views/circle.erb
@@ -1,6 +1,6 @@
-<h1>サークル一覧</h1>
+<h1 class="circle_h1">サークル一覧</h1>
     <div class="container">
-        <div class="item">
+        <div class="circle_name">
             <p class="circle_p_name">物理部</p>
             <a href="/buturibu">aaaaa</a>
         </div>
@@ -42,7 +42,7 @@
         </div>
         <div class="circle_name">
             <p class="circle_p_name">文芸部＆図書委員</p>
-            <a href="/bunngeibu-tosho">bbbbb</a>
+            <a href="/bunngeibutosho">bbbbb</a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">数学同好会</p>
