--- a/views/buturibu.erb
+++ b/views/buturibu.erb
@@ -5,7 +5,6 @@
                <h3>
                <div class="circle_b">
                    <p class="circle_images">
-                      <img src="../images/buturibu.png" alt="物理部">
+                      <img src="/assets/images/circle/buturi.png" alt="物理部">
                    </p>
-                   
                </div>
