--- a/views/circle.erb
+++ b/views/circle.erb
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="circle_name">
             <p class="circle_p_name">物理部</p>
-            <a href="/buturibu">aaaaa</a>
+            <a href="/buturibu"><img src="/assets/images/circle/buturi.png"></a>
         </div>
         <div class="circle_name">
             <p class="circle_p_name">生物部</p>
